--- a/app/src/main/res/layout/activity_property_animation_test.xml
+++ b/app/src/main/res/layout/activity_property_animation_test.xml
@@ -93,6 +93,14 @@
             android:ellipsize="end"
             android:maxLines="1"
             android:textSize="16sp"/>
+        <com.example.lijian.myapplication.custom.RectangleToCircleButton
+            android:id="@+id/mBt_r2c"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text ="@string/startAnimation"
+            style="@style/RectangleToCircleButtonStyle18"
+            />
 
     </LinearLayout>
     <ImageView
